# gce_metadata_server

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gce_metadata_server/: __init__.py  config.py  directory.py
